--- a/index.html
+++ b/index.html
@@ -1,34 +1,10 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>afternoon-cape by cheehieu</title>
+---
+layout: projects
+title: afternoon-cape
+---
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>afternoon-cape</h1>
-        <p>The power is TOO DAMN HIGH!</p>
-
-        <p class="view"><a href="https://github.com/cheehieu/afternoon-cape">View the Project on GitHub <small>cheehieu/afternoon-cape</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/cheehieu/afternoon-cape/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/cheehieu/afternoon-cape/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/cheehieu/afternoon-cape">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h1>
+<h1>afternoon-cape</h1>
+<p>The power is TOO DAMN HIGH!</p>
 <a id="afternoon-cape" class="anchor" href="#afternoon-cape" aria-hidden="true"><span class="octicon octicon-link"></span></a>afternoon-cape</h1>
 
 <p>A Power Monitor (PM aka "Afternoon") cape for the BeagleBone Black. The AfternoonCape utilizes the INA226 instrumentation amplifier to accurately sample and monitor voltage, current, and power consumption of a given supply.</p>
@@ -106,12 +82,3 @@
 <p><img src="images/pmcape_B1_oshpark_top.png" width="350">
 <img src="images/pmcape_B1_oshpark_bottom.png" width="350"></p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/cheehieu">cheehieu</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
-</html>
