--- a/index.html
+++ b/index.html
@@ -1,84 +1,71 @@
 ---
-layout: projects
+layout: post
 title: afternoon-cape
+subtitle: "A Power Monitor (PM aka "Afternoon") cape for the BeagleBone Black. The AfternoonCape utilizes the INA226 instrumentation amplifier to accurately sample and monitor voltage, current, and power consumption of a given supply."
+blog_image: /images/capes_display.jpg
 ---
 
-<h1>afternoon-cape</h1>
-<p>The power is TOO DAMN HIGH!</p>
-<a id="afternoon-cape" class="anchor" href="#afternoon-cape" aria-hidden="true"><span class="octicon octicon-link"></span></a>afternoon-cape</h1>
+afternoon-cape
+==============
 
-<p>A Power Monitor (PM aka "Afternoon") cape for the BeagleBone Black. The AfternoonCape utilizes the INA226 instrumentation amplifier to accurately sample and monitor voltage, current, and power consumption of a given supply.</p>
+A Power Monitor (PM aka "Afternoon") cape for the BeagleBone Black. The AfternoonCape utilizes the INA226 instrumentation amplifier to accurately sample and monitor voltage, current, and power consumption of a given supply.
 
-<p><img src="images/pmcape_assembled.png">
-<img src="images/pmcape_mounted.png"></p>
+<img src="images/pmcape_assembled.png">
+<img src="images/pmcape_mounted.png">
 
-<p>This repository contains:</p>
+This repository contains:
+- Altium library, schematic, and board files
+- PCB gerbers and drill files
+- Bill of materials
+- Linux device driver for CD74HC4067, INA226, TMP441
+- GUI source
 
-<ul>
-<li>Altium library, schematic, and board files</li>
-<li>PCB gerbers and drill files</li>
-<li>Bill of materials</li>
-<li>Linux device driver for CD74HC4067, INA226, TMP441</li>
-<li>GUI source</li>
-</ul>
 
-<p>Usage:</p>
+Usage:
+- loadmod afternoon-cape.ko EVM=am437xGP.txt
+- Bash shell scripts using sysfs GPIO
+- PMDC I2C protocol
 
-<ul>
-<li>loadmod afternoon-cape.ko EVM=am437xGP.txt</li>
-<li>Bash shell scripts using sysfs GPIO</li>
-<li>PMDC I2C protocol</li>
-</ul>
 
-<p>Revision History:</p>
+Revision History:
+- Alpha releases A1 (TI mux), A2 (ADI mux), A3 (discrete channel INAs)
+- Beta releases B1 (TI mux)
 
-<ul>
-<li>Alpha releases A1 (TI mux), A2 (ADI mux), A3 (discrete channel INAs)</li>
-<li>Beta releases B1 (TI mux)</li>
-</ul>
+A1:
 
-<p>A1:</p>
+<img src="images/pmcape_A1_oshpark_top.png" width="350">
+<img src="images/pmcape_A1_oshpark_bottom.png" width="350">
+- MUX_SEL0 (P8, pin 12) - GPIO1_12 (0x44e10830, 0x30 offset, #44)
+- MUX_SEL1 (P9, pin 23) - GPIO1_17 (0x44e10844, 0x44 offset, #49)
+- MUX_SEL2 (P9, pin 27) - GPIO3_19 (0x44e109a4, 0x1a4 offset, #115)
+- MUX_SEL3 (P9, pin 12) - GPIO1_28 (0x44e10878, 0x78 offset, #60)
+- INA_42 handles channels 0 through 15
+- INA_43 handles channels 16 through 31
+- Accuracy +/- %
 
-<p><img src="images/pmcape_A1_oshpark_top.png" width="350">
-<img src="images/pmcape_A1_oshpark_bottom.png" width="350"></p>
 
-<ul>
-<li>MUX_SEL0 (P8, pin 12) - GPIO1_12 (0x44e10830, 0x30 offset, #44)</li>
-<li>MUX_SEL1 (P9, pin 23) - GPIO1_17 (0x44e10844, 0x44 offset, #49)</li>
-<li>MUX_SEL2 (P9, pin 27) - GPIO3_19 (0x44e109a4, 0x1a4 offset, #115)</li>
-<li>MUX_SEL3 (P9, pin 12) - GPIO1_28 (0x44e10878, 0x78 offset, #60)</li>
-<li>INA_42 handles channels 0 through 15</li>
-<li>INA_43 handles channels 16 through 31</li>
-<li>Accuracy +/- %</li>
-</ul>
+A2:
 
-<p>A2:</p>
+<img src="images/pmcape_A2_oshpark_top.png" width="350">
+<img src="images/pmcape_A2_oshpark_bottom.png" width="350">
+- MUX_SEL0 (P8, pin 12)
+- MUX_SEL1 (P9, pin 23)
+- MUX_SEL2 (P9, pin 27)
+- MUX_SEL3 (P9, pin 12)
+- INA_42 handles channels 0 through 15
+- INA_43 handles channels 16 through 31
+- Accuracy +/- %
 
-<p><img src="images/pmcape_A2_oshpark_top.png" width="350">
-<img src="images/pmcape_A2_oshpark_bottom.png" width="350"></p>
 
-<ul>
-<li>MUX_SEL0 (P8, pin 12)</li>
-<li>MUX_SEL1 (P9, pin 23)</li>
-<li>MUX_SEL2 (P9, pin 27)</li>
-<li>MUX_SEL3 (P9, pin 12)</li>
-<li>INA_42 handles channels 0 through 15</li>
-<li>INA_43 handles channels 16 through 31</li>
-<li>Accuracy +/- %</li>
-</ul>
+A3:
 
-<p>A3:</p>
+<img src="images/pmcape_A3_oshpark_top.png" width="350">
+<img src="images/pmcape_A3_oshpark_bottom.png" width="350">
+- INA42-INA4F handles channels 0 through 11
+- Accuracy +/- %
 
-<p><img src="images/pmcape_A3_oshpark_top.png" width="350">
-<img src="images/pmcape_A3_oshpark_bottom.png" width="350"></p>
 
-<ul>
-<li>INA42-INA4F handles channels 0 through 11</li>
-<li>Accuracy +/- %</li>
-</ul>
+B1:
 
-<p>B1:</p>
-
-<p><img src="images/pmcape_B1_oshpark_top.png" width="350">
-<img src="images/pmcape_B1_oshpark_bottom.png" width="350"></p>
-      </section>
+<img src="images/pmcape_B1_oshpark_top.png" width="350">
+<img src="images/pmcape_B1_oshpark_bottom.png" width="350">
